force-app/main/default/objects/FEC_CaseID_Prefix__mdt/FEC_CaseID_Prefix__mdt.object-meta.xml
<CustomObject>
    <label>FEC CaseID Prefix</label>
    <pluralLabel>FEC CaseID Prefixes</pluralLabel>
</CustomObject>