force-app/main/default/objects/FEC_CaseID_Prefix__mdt/fields/FEC_Channel__c.field-meta.xml
<CustomField>
    <fullName>FEC_Channel__c</fullName>
    <label>Channel</label>
    <length>50</length>
    <type>Text</type>
</CustomField>