force-app/main/default/objects/FEC_CaseID_Prefix__mdt/fields/FEC_Init_Number__c.field-meta.xml
<CustomField>
    <fullName>FEC_Init_Number__c</fullName>
    <description>Legacy max number của prefix. Nếu Max(ID) trong DB nhỏ hơn giá trị này thì ID mới bắt đầu từ Init Number + 1.</description>
    <label>Init Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>