force-app/main/default/objects/FEC_CaseID_Prefix__mdt/fields/FEC_Prefix__c.field-meta.xml
<CustomField>
    <fullName>FEC_Prefix__c</fullName>
    <label>Prefix</label>
    <length>10</length>
    <type>Text</type>
</CustomField>