force-app/main/default/objects/FEC_CaseID_Prefix__mdt/fields/FEC_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>FEC_Record_Type__c</fullName>
    <label>Record Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>